Fix sidebar margin for improved layout spacing

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ h2{
 #sidebar{
     border-radius: 20px;
     float: right;
-    margin: 30px 30px 0 100px;
+    margin: 30px 30px 30px 30px;
 }
 
 /* make sure headings clear floated sidebar */
